--- a/knallerfalke.de/pubspec.yaml
+++ b/knallerfalke.de/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   webview_flutter: ^0.3.19+6
   socket_io_client: ^0.9.8
   url_launcher: ^5.4.2
+  validators: ^2.0.0
+  http: ^0.12.0+4
+  fluttertoast: ^3.1.3
 
 
 
